External link general beautification project

--- a/app/src/main/res/drawable/dialog_frame.xml
+++ b/app/src/main/res/drawable/dialog_frame.xml
@@ -1,12 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/staples_white"/>
+    <corners android:radius="10dp" />
     <stroke
         android:width="2dp"
         android:color="@color/staples_black"/>
-    <padding
-        android:left="2dp"
-        android:top="2dp"
-        android:right="2dp"
-        android:bottom="2dp"/>
 </shape>
