--- a/app/src/main/res/layout/external_dialog.xml
+++ b/app/src/main/res/layout/external_dialog.xml
@@ -1,42 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:orientation="vertical"
-              android:background="@drawable/dialog_frame">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:paddingTop="@dimen/margin_16dp"
         android:textSize="@dimen/fontsize_20sp"
         android:textColor="@color/staples_black"
-        android:text="@string/external_title"
-        android:background="@null"/>
+        android:text="@string/external_title"/>
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:padding="@dimen/margin_16dp"
+        android:gravity="center_horizontal"
         android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/staples_black"
-        android:text="@string/external_prompt"
-        android:background="@null"/>
+        android:text="@string/external_prompt"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/staples_black"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:paddingTop="2dp"
-        android:background="@color/staples_black">
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/no"
             style="@style/ExternalButtonStyle"
-            android:layout_marginRight="1dp"
             android:text="@string/external_no"/>
+        <View
+            android:layout_width="2dp"
+            android:layout_height="match_parent"
+            android:background="@color/staples_black"/>
         <TextView
             android:id="@+id/yes"
             style="@style/ExternalButtonStyle"
-            android:layout_marginLeft="1dp"
             android:text="@string/external_yes"/>
     </LinearLayout>
 </LinearLayout>
