increasing vertical tap area on login/logout button

--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -15,7 +15,11 @@
         style="@style/DrawerStyle"
         android:layout_width="0dp"
         android:layout_weight="1"/>
+    <!--override DrawerStyle height to make login/logout button more touchable-->
     <TextView
         android:id="@+id/extra"
-        style="@style/DrawerStyle"/>
+        style="@style/DrawerStyle"
+        android:gravity="center_vertical"
+        android:layout_height="match_parent"
+        />
 </LinearLayout>
