--- a/app/src/main/res/layout/personal_feed_product_item.xml
+++ b/app/src/main/res/layout/personal_feed_product_item.xml
@@ -11,7 +11,8 @@
         android:layout_width="@dimen/personal_feed_item_image_width"
         android:layout_height="@dimen/personal_feed_item_image_height"
         android:layout_marginRight="@dimen/margin_16dp"
-        android:paddingTop="@dimen/verticalspacing_8dp"/>
+        android:paddingTop="@dimen/verticalspacing_8dp"
+        android:paddingBottom="@dimen/verticalspacing_8dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
