grade change and ilona ui suggestions

--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -51,7 +51,7 @@
 			android:layout_below="@id/checkout_item_subtotal"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-            android:paddingTop="@dimen/margin_16dp"
+            android:paddingTop="@dimen/action_bar_half_margin"
 			android:text="@string/oversized_shipping_fee"
 			android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
@@ -63,7 +63,7 @@
 			android:layout_alignParentRight="true"
 			android:layout_height="wrap_content"
 			android:layout_width="wrap_content"
-            android:paddingTop="@dimen/margin_16dp"
+            android:paddingTop="@dimen/action_bar_half_margin"
 			android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
             android:visibility="gone"
@@ -76,7 +76,7 @@
 			android:layout_below="@id/oversized_shipping_label"
 			android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/margin_16dp"
+            android:paddingTop="@dimen/action_bar_half_margin"
 			android:text="@string/shipping"
 			android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
@@ -87,7 +87,7 @@
 			android:layout_alignBaseline="@id/checkout_shipping_label"
 			android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/margin_16dp"
+            android:paddingTop="@dimen/action_bar_half_margin"
 			android:textColor="@color/staples_black"
             android:textSize="@dimen/fontsize_14sp"
 			/>
