--- a/app/src/main/res/layout/checkout_guest_entry.xml
+++ b/app/src/main/res/layout/checkout_guest_entry.xml
@@ -7,8 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="@dimen/margin_16dp"
-    android:paddingBottom="220dp">
+    android:padding="@dimen/margin_16dp">
 
     <!--shipping address-->
     <TextView
