--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/margin_16dp"
     android:paddingRight="@dimen/margin_16dp"
     android:orientation="vertical"
-    android:background="@color/staples_white">
+    android:background="@color/staples_white"
+    android:paddingBottom="@dimen/verticalspacing_24dp">
 
     <!-- scrollable contents -->
     <ScrollView
@@ -189,11 +190,11 @@
     <!-- continue shopping button -->
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="36dp"
-        android:layout_marginTop="@dimen/verticalspacing_8dp"
-        android:layout_marginBottom="@dimen/verticalspacing_8dp"
-        android:padding="0dp"
-        card_view:cardCornerRadius="1dp"
+        android:layout_height="@dimen/verticalspacing_48dp"
+        android:layout_below="@id/checkout_tax"
+        android:layout_marginTop="@dimen/margin_16dp"
+        card_view:contentPadding="@dimen/cartmath_half_margin"
+        card_view:cardCornerRadius="8dp"
         card_view:cardElevation="0dp"
         card_view:cardBackgroundColor="@color/staples_red">
         <TextView
@@ -201,8 +202,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:text="@string/continue_shopping"
-            android:textSize="@dimen/fontsize_14sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:textColor="@color/staples_white"/>
     </android.support.v7.widget.CardView>
 </app.staples.mobile.cfa.widget.AnimatorLayout>
