--- a/app/src/main/res/layout/confirmation_fragment.xml
+++ b/app/src/main/res/layout/confirmation_fragment.xml
@@ -39,24 +39,17 @@
                 android:textSize="@dimen/fontsize_24sp"
                 android:textColor="@color/staples_black"
                 android:text="@string/order_confirmation_msg"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/verticalspacing_8dp"
-                android:textSize="@dimen/fontsize_14sp"
-                android:textColor="@color/staples_black"
-                android:text="@string/order_confirmation_msg2"/>
+
             <TextView
                 android:id="@+id/email_confirm_msg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="4dp"
+                android:gravity="center"
+                android:layout_marginTop="@dimen/verticalspacing_8dp"
                 android:layout_marginBottom="32dp"
                 android:textSize="@dimen/fontsize_14sp"
                 android:textColor="@color/staples_black"
-                android:text="@string/order_confirmation_msg3"/>
+                android:text="@string/order_confirmation_msg2"/>
 
             <!--order number-->
             <TextView
@@ -139,6 +132,7 @@
                     android:id="@+id/open_account_dlg_action"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/margin_16dp"
                     android:layout_alignParentRight="true"
                     android:layout_below="@id/create_account_hr"
                     android:layout_marginTop="@dimen/margin_16dp"
@@ -202,6 +196,7 @@
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
+            android:text="@string/continue_shopping"
             android:textSize="@dimen/fontsize_18sp"
             android:textColor="@color/staples_white"/>
     </android.support.v7.widget.CardView>
