--- a/app/src/main/res/layout/bundle_frame.xml
+++ b/app/src/main/res/layout/bundle_frame.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<app.staples.mobile.cfa.widget.AnimatorFrame xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+<app.staples.mobile.cfa.widget.AnimatorFrame xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <app.staples.mobile.cfa.widget.DataWrapper
@@ -22,6 +23,28 @@
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:paddingTop="@dimen/verticalspacing_48dp">
+            <TextView
+                android:id="@+id/search_results_not_found_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/fontsize_18sp"
+                android:textColor="@color/staples_black"
+                android:gravity="center_horizontal"
+                android:paddingBottom="@dimen/verticalspacing_24dp"/>
+            <TextView
+                android:id="@+id/search_results_not_found_suggestions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/fontsize_12sp"
+                android:textColor="@color/staples_dark_gray"
+                android:gravity="center_horizontal"/>
         </LinearLayout>
     </app.staples.mobile.cfa.widget.DataWrapper>
     <ImageButton
