--- a/app/src/main/res/layout/order_item_row.xml
+++ b/app/src/main/res/layout/order_item_row.xml
@@ -2,49 +2,62 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/orderLayout">
+    android:id="@+id/orderLayout"
+    android:padding="@dimen/margin_16dp">
     <TextView
         android:id="@+id/order_date"
         style="@style/OrderHeading"
-        android:paddingTop="@dimen/verticalspacing_16dp"
-        android:paddingLeft="@dimen/margin_16dp"
         android:layout_alignParentLeft="true"/>
     <TextView
         android:id="@+id/order_status"
         style="@style/OrderHeading"
-        android:paddingTop="@dimen/verticalspacing_16dp"
-        android:paddingRight="@dimen/margin_16dp"
         android:layout_alignParentRight="true"
         android:textColor="@color/staples_green" />
     <TextView
+        android:id="@+id/order_shipment"
+        style="@style/OrderValue"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/order_date"/>
+    <TextView
+        android:id="@+id/order_number"
+        style="@style/OrderValue"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/order_status"/>
+    <TextView
         android:id="@+id/order_item_count"
         style="@style/OrderValue"
-        android:paddingLeft="@dimen/margin_16dp"
-        android:paddingRight="@dimen/margin_32dp"
+        android:paddingRight="@dimen/margin_16dp"
         android:textColor="@color/staples_dark_gray"
-        android:layout_below="@+id/order_date"/>
+        android:layout_below="@+id/order_shipment"/>
     <TextView
         android:id="@+id/order_total"
         style="@style/OrderValue"
-        android:layout_below="@+id/order_date"
+        android:layout_below="@+id/order_shipment"
         android:layout_toRightOf="@+id/order_item_count"
         android:textColor="@color/staples_black"/>
-    <LinearLayout
-        android:layout_width="fill_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/button_layout"
-        android:padding="@dimen/margin_16dp"
+        android:paddingTop="@dimen/margin_16dp"
         android:layout_below="@+id/order_item_count">
         <Button
+            android:layout_width="@dimen/sku_accessory_image_height"
+            android:layout_height="@dimen/browse_item_height"
             style="@style/OrderButtonStyle"
             android:text="@string/track_shipment"
             android:id="@+id/track_shipment_btn"
-            android:paddingRight="@dimen/verticalspacing_24dp"/>
+            android:layout_alignParentLeft="true"
+            android:background="@drawable/rounded_corner_green"/>
         <Button
+            android:layout_width="@dimen/sku_accessory_image_height"
+            android:layout_height="@dimen/browse_item_height"
             style="@style/OrderButtonStyle"
             android:text="@string/view_receipt"
-            android:id="@+id/order_reciept_btn" />
-        </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:id="@+id/order_reciept_btn"
+            android:background="@drawable/rounded_corner_gray"/>
+        </RelativeLayout>
 </RelativeLayout>
 
 
