--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -250,19 +250,15 @@
     </style>
 
     <style name="OrderButtonStyle">
-        <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/staples_white</item>
         <item name="android:textSize">@dimen/fontsize_14sp</item>
-        <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_weight">1</item>
-        <item name="android:padding">@dimen/margin_16dp</item>
     </style>
 
     <style name="OrderHeading">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textSize">@dimen/fontsize_18sp</item>
+        <item name="android:textSize">@dimen/fontsize_14sp</item>
         <item name="android:textColor">@color/staples_black</item>
     </style>
 
@@ -270,7 +266,7 @@
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">@dimen/fontsize_16sp</item>
+        <item name="android:textSize">@dimen/fontsize_14sp</item>
         <item name="android:textColor">@color/staples_black</item>
         <item name="android:paddingTop">@dimen/verticalspacing_8dp</item>
     </style>
@@ -280,7 +276,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">@dimen/fontsize_16sp</item>
         <item name="android:textColor">@color/staples_black</item>
-        <item name="android:paddingTop">@dimen/verticalspacing_8dp</item>
+        <item name="android:paddingTop">@dimen/action_bar_quarter_margin</item>
     </style>
 
     <style name="HorizontalDivLine">
