--- a/app/src/main/res/layout/config_frame.xml
+++ b/app/src/main/res/layout/config_frame.xml
@@ -125,14 +125,7 @@
                                 android:gravity="center"
                                 android:textSize="@dimen/fontsize_13sp"
                                 android:textColor="@color/staples_black"
-                                android:text="@string/redeem"/>
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:gravity="center"
-                                android:textSize="@dimen/fontsize_13sp"
-                                android:textColor="@color/staples_black"
-                                android:text="@string/reward"/>
+                                android:text="@string/rewards"/>
                         </LinearLayout>
                     </LinearLayout>
 
